--- a/vsrx_bridged_mode/NAD/nad-right.yaml
+++ b/vsrx_bridged_mode/NAD/nad-right.yaml
@@ -1,16 +1,16 @@
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
-  name: left
+  name: right
 spec:
   config: '{
     "cniVersion": "0.3.0",
-    "name": "left",
+    "name": "right",
     "type": "bridge",
-    "bridge": "br1",
+    "bridge": "br2",
     "isGateway": true,
     "ipam": {
      "type": "host-local",
-     "subnet": "192.168.6.0/24"
+     "subnet": "192.168.7.0/24"
     }
 }'
