--- a/ubuntu_vm/templates/interfaces.yaml
+++ b/ubuntu_vm/templates/interfaces.yaml
@@ -5,4 +5,8 @@ network:
       nameservers:
         addresses: [8.8.8.8]
       optional: true
+    enp2s0:
+      optional: true
+    enp3s0:
+      optional: true
   version: 2
