--- a/ubuntu_vm/ubuntu_vm2.yml
+++ b/ubuntu_vm/ubuntu_vm2.yml
@@ -4,6 +4,9 @@ kind: VirtualMachine
 metadata:
   name: ubuntu-kv2
 spec:
+  selector:
+    matchLabels:
+      kubernetes.io/hostname: k8s-worker2
   running: True
   template:
     metadata:
@@ -13,15 +16,18 @@ spec:
       domain:
         cpu:
           sockets: 1
-          cores: 4
+          cores: 6
           threads: 1
         resources:
           requests:
-            memory: 8Gi
-            cpu: "4"
+            memory: "16Gi"
+            cpu: "6"
           limits:
-            cpu: "4"
-            memory: 8Gi
+            cpu: "6"
+            memory: "16Gi"
+            #memory:
+            #  hugepages:
+            #    pageSize: "Gi"
         devices:
           disks:
             - name: boot
@@ -30,12 +36,12 @@ spec:
           interfaces:
             - name: default
               masquerade: {}
-            - name: fxp
-              bridge: {}
             - name: intf1
               bridge: {}
+              model: virtio
             - name: intf3
               bridge: {}
+              model: virtio
       volumes:
         - name: boot
           dataVolume:
@@ -43,9 +49,6 @@ spec:
       networks:
         - name: default
           pod: {}
-        - name: fxp
-          multus:
-            networkName: fxp
         - name: intf1
           multus:
             networkName: intf1
