--- a/ubuntu_vm/NAD/vm2/nad-intf1.yaml
+++ b/ubuntu_vm/NAD/vm2/nad-intf1.yaml
@@ -9,6 +9,7 @@ spec:
     "type": "bridge",
     "bridge": "br1",
     "isGateway": true,
+    "mtu": 9198,
     "ipam": {
      "type": "host-local",
      "subnet": "192.168.6.0/24"
