--- a/ubuntu_vm/NAD/vm2/nad-intf3.yaml
+++ b/ubuntu_vm/NAD/vm2/nad-intf3.yaml
@@ -9,6 +9,7 @@ spec:
     "type": "bridge",
     "bridge": "br3",
     "isGateway": true,
+    "mtu": 9198,
     "ipam": {
      "type": "host-local",
      "subnet": "192.168.9.0/24"
